--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +9,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@layer components{
+  .card{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    background-color: whitesmoke;
+    cursor: pointer;
+    
+  }
+  .inside{
+    display: flex;
+    flex-direction: column;
+  }
 }
